# vocabulary-builder

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc  .readthedocs.yml  Makefile  Pipfile  README.md  babel.cfg  docker-compose.yml  dodo.py  entrypoint.sh  orm.md  pyproject.toml  setup.cfg  test_small_db.json  tiny_db_input.json
docker/: Dockerfile  entrypoint.sh
docs/: api.rst  conf.py  database.rst  index.rst  requirements.txt
locales/de/LC_MESSAGES/: translations.po
locales/fr/LC_MESSAGES/: translations.po
locales/uk/LC_MESSAGES/: translations.po
src/: exceptions.py  models.py  vocabulary_builder.py
src/db/: alembic.ini  crud.py  database.py  db_filling_example.py  models.py
src/db/migration/: env.py
src/static/css/: header.css  main.css  style.css  styles.css  word_card.css
src/static/js/: index.js  language_selector.js  main.js  new_word.js  word_card.js
src/templates/: index.html  login.html
tests/: test_app.py
vocabulary_builder/: dependencies.py  exceptions.py  main.py  models.py
vocabulary_builder/db/: alembic.ini  crud.py  database.py  db_cleanup.py  db_filling_example.py  db_populate.py  models.py
vocabulary_builder/db/migration/: env.py
vocabulary_builder/routes/: auth.py  pages.py  users.py  words.py
vocabulary_builder/static/css/: favorites.css  footer.css  header.css  learn.css  (+4 more)
vocabulary_builder/templates/: favorites.html  footer.html  index.html  learn.html  login.html  page_not_found.html  register.html  signup.html  tests.html
vocabulary_builder/utils/: auth.py  translations.py  word_info.py
(+10 files in other folders)
